--- a/sass/components/_style.scss
+++ b/sass/components/_style.scss
@@ -61,7 +61,7 @@ footer.page-footer {
     background: -o-linear-gradient(black, MidnightBlue ); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(red, MidnightBlue ); /* For Firefox 3.6 to 15 */
     background: linear-gradient(black, MidnightBlue ); /* Standard syntax */
-    height: 1080px;
+    height: 100%;
 }
 
 
